# rssify

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: black.yaml  bot.yml  image.yaml  pylint.yaml  pypi.yaml
rssify/: __main__.py  bot.py  message.py  models.py  rss.py  utils.py
